--- a/src/phases/complete.jade
+++ b/src/phases/complete.jade
@@ -2,8 +2,7 @@ doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
-    title= name
-    //- link(rel='stylesheet', href='css/style.css')
+    title
   body
     div(id='content')
 
