--- a/src/stylesheets/slides.css
+++ b/src/stylesheets/slides.css
@@ -1,10 +1,11 @@
 .remark-code {
-  overflow: scroll;
+  overflow: auto;
+  max-height: 530px;
 }
 
 iframe {
   border: none;
-  width: 800px;
+  width: 810px;
   height: 610px;
   overflow: hidden !important;
 }
