Adding speed the madafacas and splash screen slides

--- a/src/phases/speed.jade
+++ b/src/phases/speed.jade
@@ -7,5 +7,5 @@ html(lang='en')
     div(id='content')
 
     script(src='../js/phaser.min.js')
-    script(src='../js/splash.js')
+    script(src='../js/speed.js')
     
